--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "art"
-version = "0.1.0"
+name = "openpipe-art"
+version = "0.1.3"
 description = "The OpenPipe Agent Reinforcement Training (ART) library"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 dependencies = [
     "bitsandbytes>=0.45.2 ; sys_platform == 'linux'",
     "matplotlib>=3.10.1",
@@ -26,6 +26,15 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/art", "src/mp_actors"]
+
+[tool.hatch.build]
+sources = ["src"]
+
 [tool.uv]
 dev-dependencies = [
     "black>=25.1.0",
@@ -35,6 +44,7 @@ dev-dependencies = [
     "panza",
     "polars>=1.26.0",
     "skypilot[aws,cudo,do,fluidstack,gcp,lambda,paperspace,runpod]>=0.8.0",
+    "hatch>=1.14.1",
 ]
 override-dependencies = [
     "bitsandbytes; sys_platform == 'linux'",
