use skypilot nightly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dev-dependencies = [
     "openpipe>=4.49.0",
     "panza",
     "polars>=1.26.0",
-    "skypilot-nightly[aws,cudo,do,fluidstack,gcp,lambda,paperspace,runpod]>=0.9.2",
+    "skypilot-nightly[aws,cudo,do,fluidstack,gcp,lambda,paperspace,runpod]>=1.0.0.dev20250430",
     "hatch>=1.14.1",
     "semver>=3.0.4",
 ]
