--- a/examples/roflbot/pyproject.toml
+++ b/examples/roflbot/pyproject.toml
@@ -31,8 +31,8 @@ dependencies = [
     "pytest>=8.3.5",
     "tenacity>=9.1.2",
     "pytest-asyncio>=0.26.0",
-    "openpipe>=4.50.0",
     "openpipe-art",
+    "langfuse>=2.60.4",
 ]
 
 [tool.uv]
