ArcticInference speculative config

--- a/examples/roflbot/pyproject.toml
+++ b/examples/roflbot/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "pytest-asyncio>=0.26.0",
     "openpipe-art",
     "langfuse>=2.60.4",
+    "arctic-inference[vllm]",
 ]
 
 [tool.uv]
@@ -45,3 +46,4 @@ override-dependencies = [
 [tool.uv.sources]
 peft = { git = "https://github.com/huggingface/peft.git" }
 openpipe-art = { path = "../../", editable = true }
+arctic-inference = { git = "https://github.com/corbt/ArcticInference.git" }
