--- a/examples/art-e/pyproject.toml
+++ b/examples/art-e/pyproject.toml
@@ -22,12 +22,14 @@ dependencies = [
     "tiktoken>=0.9.0",
     "tqdm>=4.62.0",
     "transformers>=4.50.3",
-    "skypilot[runpod]>=0.8.1",
     "openpipe==4.49.0",
     "litellm>=1.65.0.post1",
     "ipywidgets>=8.1.6",
     "polars>=1.27.1",
     "openpipe-art",
+    "langfuse>=2.60.5",
+    "omegaconf>=2.4.0.dev3",
+    "skypilot[runpod]>=0.9",
 ]
 
 [build-system]
@@ -42,6 +44,4 @@ art-e = { workspace = true }
 openpipe-art = { path = "../../", editable = true }
 
 [dependency-groups]
-dev = [
-    "art-e",
-]
+dev = ["art-e"]
