update version and allow prerelase

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "torchao>=0.9.0",
     "unsloth==2025.5.1 ; sys_platform == 'linux'",
     "unsloth-zoo==2025.5.1 ; sys_platform == 'linux'",
-    "vllm==0.8.0",
+    "vllm==0.8.0rc1",
     "wandb>=0.19.8",
     "peft>=0.14.0",
     "typer>=0.15.2",
@@ -57,6 +57,7 @@ override-dependencies = [
     "bitsandbytes; sys_platform == 'linux'",
     "xformers; sys_platform == 'linux'",
 ]
+prerelease = "allow"
 
 [tool.uv.sources]
 panza = { git = "https://github.com/corbt/panza.git" }
