--- a/dev/tau-bench/pyproject.toml
+++ b/dev/tau-bench/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "mistralai>=1.8.2",
     "openai>=1.88.0",
     "openpipe-art",
+    "skypilot[runpod]>=0.9.3",
     "tenacity>=9.1.2",
     "termcolor>=3.1.0",
 ]
