--- a/examples/art-e/pyproject.toml
+++ b/examples/art-e/pyproject.toml
@@ -23,13 +23,12 @@ dependencies = [
     "tqdm>=4.62.0",
     "transformers>=4.50.3",
     "skypilot[runpod]==0.9.3",
-    "openpipe==4.49.0",
-    "litellm>=1.65.0.post1",
     "ipywidgets>=8.1.6",
     "polars>=1.27.1",
     "openpipe-art",
     "weave>=0.51.53",
     "accelerate==1.7.0",
+    "litellm==1.73.6",
 ]
 
 [build-system]
