--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ swebench = [
     "langfuse>=2.60.7",
     "modal>=1.0.1",
     "sweagent",
-    "swebench>=4.0.3"
+    "swebench>=4.0.3",
 ]
 
 [project.scripts]
@@ -57,6 +57,7 @@ packages = ["src/art", "src/mp_actors"]
 sources = ["src"]
 
 [tool.uv]
+required-version = ">=0.6.15"
 dev-dependencies = [
     "black>=25.1.0",
     "ipykernel>=6.29.5",
