--- a/dev/tau-bench/pyproject.toml
+++ b/dev/tau-bench/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "termcolor>=3.1.0",
     "openai>=1.74.0",
     "anthropic>=0.49.0",
+    "accelerate==1.7.0",
 ]
 
 [tool.uv.sources]
