--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ HF_TOKEN=YOUR_HUGGINGFACE_TOKEN
 OPENPIPE_API_KEY=YOUR_OPENPIPE_API_KEY
 # Optional, Together API key (used for deploying models to Together)
 TOGETHER_API_KEY=YOUR_TOGETHER_API_KEY
+# Optional, OpenRouter API key (used for benchmarking other models)
+OPENROUTER_API_KEY=YOUR_OPENROUTER_API_KEY
+
 
 # Optional, S3 configuration for log and model backups
 AWS_ACCESS_KEY_ID=YOUR_AWS_ACCESS_KEY_ID
