chore: SWE-Bench related changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
 [project.optional-dependencies]
 swebench = [
     "aiolimiter>=1.2.1",
+    "daytona-sdk>=0.21.5",
     "langfuse>=2.60.7",
     "modal>=1.0.1",
     "sweagent",
@@ -64,7 +65,7 @@ dev-dependencies = [
     "ipywidgets>=8.1.5",
     "openpipe>=4.49.0",
     "hatch>=1.14.1",
-    "skypilot[aws,cudo,do,fluidstack,gcp,lambda,paperspace,runpod]==0.8.0",
+    "skypilot[cudo,do,fluidstack,gcp,lambda,paperspace,runpod]==0.8.0",
 ]
 override-dependencies = [
     "bitsandbytes; sys_platform == 'linux'",
@@ -73,5 +74,5 @@ override-dependencies = [
 
 [tool.uv.sources]
 panza = { git = "https://github.com/corbt/panza.git" }
-sweagent = { git = "https://github.com/bradhilton/SWE-agent.git" }
 torchtune = { git = "https://github.com/pytorch/torchtune.git", rev = "2344509cf83bd886538fe3e8263e5145d1afb5c2" }
+sweagent = { git = "https://github.com/bradhilton/SWE-agent" }
