fix: Only attempt to install vllm on linux
I'm getting errors when trying to install vllm 0.9.1 on macos (reproduced below).

Like unsloth, we should only attempt to install vllm on linux.

```
  × Failed to build `outlines-core==0.1.26`
  ├─▶ The build backend returned an error
  ╰─▶ Call to `setuptools.build_meta.build_wheel` failed (exit status: 1)

      [stdout]
      running bdist_wheel
      running build
      running build_py
      copying python/outlines_core/_version.py ->
      build/lib.macosx-14.0-arm64-cpython-313/outlines_core
      copying python/outlines_core/__init__.py ->
      build/lib.macosx-14.0-arm64-cpython-313/outlines_core
      running egg_info
      writing python/outlines_core.egg-info/PKG-INFO
      writing dependency_links to python/outlines_core.egg-info/dependency_links.txt
      writing requirements to python/outlines_core.egg-info/requires.txt
      writing top-level names to python/outlines_core.egg-info/top_level.txt
      reading manifest file 'python/outlines_core.egg-info/SOURCES.txt'
      adding license file 'LICENSE'
      writing manifest file 'python/outlines_core.egg-info/SOURCES.txt'
      copying python/outlines_core/py.typed ->
      build/lib.macosx-14.0-arm64-cpython-313/outlines_core
      copying python/outlines_core/fsm/__init__.py ->
      build/lib.macosx-14.0-arm64-cpython-313/outlines_core/fsm
      copying python/outlines_core/fsm/guide.py ->
      build/lib.macosx-14.0-arm64-cpython-313/outlines_core/fsm
      copying python/outlines_core/fsm/json_schema.py ->
      build/lib.macosx-14.0-arm64-cpython-313/outlines_core/fsm
      copying python/outlines_core/fsm/outlines_core_rs.pyi ->
      build/lib.macosx-14.0-arm64-cpython-313/outlines_core/fsm
      copying python/outlines_core/fsm/regex.py ->
      build/lib.macosx-14.0-arm64-cpython-313/outlines_core/fsm
      running build_ext
      running build_rust

      [stderr]
      /Users/kyle/Library/Caches/uv/builds-v0/.tmp8FbUtL/lib/python3.13/site-packa

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "torchao>=0.9.0",
     "unsloth==2025.6.12 ; sys_platform == 'linux'",
     "unsloth-zoo==2025.6.8 ; sys_platform == 'linux'",
-    "vllm>=0.9.0",
+    "vllm==0.9.1 ; sys_platform == 'linux'",
     "wandb>=0.19.8",
     "weave>=0.51.51",
     "peft>=0.14.0",
