--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "semver>=3.0.4",
     "torchtune",
     "trl>=0.19.0",
+    "setproctitle>=1.3.6",
 ]
 
 [project.optional-dependencies]
