--- a/dev/tau-bench/pyproject.toml
+++ b/dev/tau-bench/pyproject.toml
@@ -15,7 +15,11 @@ dependencies = [
     "openai>=1.74.0",
     "anthropic>=0.49.0",
     "accelerate==1.7.0",
+    "vllm==0.9.1; sys_platform == 'linux'",
 ]
+
+[tool.uv]
+override-dependencies = ["vllm; sys_platform == 'linux'"]
 
 [tool.uv.sources]
 openpipe-art = { path = "../../", editable = true }
