--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,29 +5,19 @@ description = "The OpenPipe Agent Reinforcement Training (ART) library"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "bitsandbytes>=0.45.2 ; sys_platform == 'linux'",
     "matplotlib>=3.10.1",
     "openai>=1.65.5",
     "seaborn>=0.13.2",
     "setuptools>=78.1.0",
-    "torch>=2.7.0",
-    "torchao>=0.9.0",
-    "unsloth==2025.6.12 ; sys_platform == 'linux'",
-    "unsloth-zoo==2025.6.8 ; sys_platform == 'linux'",
-    "vllm==0.9.1 ; sys_platform == 'linux'",
     "wandb>=0.19.8",
     "weave>=0.51.51",
-    "peft>=0.14.0",
     "typer>=0.15.2",
     "tblib>=3.0.0",
     "litellm>=1.63.0",
     "polars>=1.26.0",
     "awscli>=1.38.1",
-    "hf-xet>=1.1.0",
     "panza",
     "semver>=3.0.4",
-    "torchtune",
-    "trl>=0.19.0",
     "setproctitle>=1.3.6",
     "accelerate==1.7.0"
 ]
@@ -40,6 +30,19 @@ swebench = [
     "modal>=1.0.1",
     "sweagent",
     "swebench>=4.0.3",
+]
+
+backend = [
+    "peft>=0.14.0",
+    "hf-xet>=1.1.0",
+    "bitsandbytes>=0.45.2",
+    "unsloth==2025.6.12",
+    "unsloth-zoo==2025.6.8",
+    "vllm==0.9.1",
+    "torchtune",
+    "trl>=0.19.0",
+    "torch>=2.7.0",
+    "torchao>=0.9.0",
 ]
 
 [project.scripts]
@@ -68,10 +71,6 @@ dev-dependencies = [
     "openpipe>=4.49.0",
     "hatch>=1.14.1",
     "skypilot[cudo,do,fluidstack,gcp,lambda,paperspace,runpod]==0.8.0",
-]
-override-dependencies = [
-    "bitsandbytes; sys_platform == 'linux'",
-    "xformers; sys_platform == 'linux'",
 ]
 
 [tool.uv.sources]
