--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "openpipe-art"
-version = "0.3.12"
+version = "0.3.13"
 description = "The OpenPipe Agent Reinforcement Training (ART) library"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -29,6 +29,7 @@ dependencies = [
     "torchtune",
     "trl>=0.19.0",
     "setproctitle>=1.3.6",
+    "accelerate==1.7.0"
 ]
 
 [project.optional-dependencies]
