--- a/dev/tau-bench/pyproject.toml
+++ b/dev/tau-bench/pyproject.toml
@@ -8,14 +8,14 @@ dependencies = [
     "litellm>=1.72.6.post2",
     "mistralai>=1.8.2",
     "openpipe>=4.50.0",
-    "openpipe-art",
+    "openpipe-art[backend]",
     "skypilot[runpod]>=0.9.3",
     "tenacity>=9.1.2",
     "termcolor>=3.1.0",
     "openai>=1.74.0",
     "anthropic>=0.49.0",
     "accelerate==1.7.0",
-    "vllm==0.9.1; sys_platform == 'linux'",
+    "vllm==0.9.1; sys_platform == 'linux'"
 ]
 
 [tool.uv]
@@ -23,3 +23,9 @@ override-dependencies = ["vllm; sys_platform == 'linux'"]
 
 [tool.uv.sources]
 openpipe-art = { path = "../../", editable = true }
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
+    "ipywidgets>=8.1.7",
+]
