--- a/dev/swebench/pyproject.toml
+++ b/dev/swebench/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
     "daytona-sdk>=0.21.5",
     "langfuse>=2.60.7",
     "modal>=1.0.1",
-    "openpipe-art[backend]",
+    "openpipe-art",
     "sweagent",
     "swebench>=4.0.3",
 ]
@@ -20,4 +20,8 @@ sweagent = { git = "https://github.com/bradhilton/SWE-agent" }
 dev = [
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.7",
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.0.0",
+    "pytest-timeout>=2.4.0",
+    "pytest-xdist>=3.8.0",
 ]
