--- a/dev/swebench/pyproject.toml
+++ b/dev/swebench/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
     "daytona-sdk>=0.21.5",
     "langfuse>=2.60.7",
     "modal>=1.0.1",
-    "openpipe-art",
+    "openpipe-art[backend,plotting]",
     "sweagent",
     "swebench>=4.0.3",
 ]
