--- a/examples/art-e/pyproject.toml
+++ b/examples/art-e/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "weave>=0.51.53",
     "accelerate==1.7.0",
     "litellm==1.73.6",
+    "tenacity>=9.1.2",
 ]
 
 [build-system]
