--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.10"
 dependencies = ["openai>=1.65.5", "typer>=0.15.2", "litellm>=1.63.0"]
 
 [project.optional-dependencies]
-plotting = ["matplotlib>=3.10.1", "seaborn>=0.13.2", "polars>=1.26.0"]
+plotting = ["matplotlib>=3.10.1", "seaborn>=0.13.2"]
 
 backend = [
     "peft>=0.14.0",
@@ -28,6 +28,7 @@ backend = [
     "semver>=3.0.4",
     "setuptools>=78.1.0",
     "wandb>=0.19.8",
+    "polars>=1.26.0",
 ]
 
 [project.scripts]
