--- a/dev/swebench/pyproject.toml
+++ b/dev/swebench/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "openpipe-art[backend,plotting]",
     "sweagent",
     "swebench>=4.0.3",
+    "tenacity>=9.1.2",
 ]
 
 [tool.uv.sources]
