Update run_checks.sh to use uv run, update docs and CI

--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -1,4 +1,4 @@
-name: Ruff Format Check
+name: Code Quality Checks
 
 on:
   pull_request:
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  ruff:
+  quality-checks:
     runs-on: ubuntu-latest
     
     steps:
@@ -19,11 +19,22 @@ jobs:
       with:
         python-version: '3.10'
     
-    - name: Install ruff
-      run: pip install ruff
+    - name: Install uv
+      run: |
+        curl -LsSf https://astral.sh/uv/install.sh | sh
+        echo "$HOME/.cargo/bin" >> $GITHUB_PATH
     
-    - name: Check formatting with ruff
-      run: ruff format --check .
-    
-    - name: Check linting with ruff
-      run: ruff check .
+    - name: Run code quality checks
+      run: |
+        ./scripts/run_checks.sh || {
+          echo ""
+          echo "❌ Code quality checks failed!"
+          echo ""
+          echo "To fix these issues locally, run:"
+          echo "  ./scripts/run_checks.sh --fix"
+          echo ""
+          echo "Then commit and push the changes."
+          echo ""
+          echo "For more details, see CONTRIBUTING.md"
+          exit 1
+        }
