Add ART•E notebook (#240)
* Add notebook

* Remove numpy cells from art e

* Refine intro

* Add ART•E notebook to README

* Add benchmarks display notebook

* Fix ruff

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__/
 grpo_trainer_lora_model/
 logs/
 shared_cache.db
+data/cache.db
 streaming-chat-completions/
 unsloth_compiled_cache/
 wandb/
