--- a/examples/art-mcp/pyproject.toml
+++ b/examples/art-mcp/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "aiohttp>=3.12.14",
     "asyncio>=3.4.3",
     "mcp>=1.11.0",
     "openai>=1.74.0",
