--- a/examples/art-mcp/pyproject.toml
+++ b/examples/art-mcp/pyproject.toml
@@ -10,8 +10,12 @@ dependencies = [
     "click>=8.1.8",
     "mcp>=1.11.0",
     "openai>=1.74.0",
-    "openpipe-art[skypilot]>=0.4.4",
+    "openpipe-art[skypilot]",
     "python-dotenv>=1.1.1",
     "tenacity>=9.1.2",
     "weave>=0.51.56",
 ]
+
+
+[tool.uv.sources]
+openpipe-art = { path = "../../", editable = true }
