--- a/examples/art-mcp/pyproject.toml
+++ b/examples/art-mcp/pyproject.toml
@@ -19,3 +19,10 @@ dependencies = [
 
 [tool.uv.sources]
 openpipe-art = { path = "../../", editable = true }
+
+[dependency-groups]
+dev = [
+    "polars>=1.31.0",
+    "ipywidgets>=8.1.6",
+    "ipykernel>=6.29.5",
+]
