--- a/examples/art-mcp/pyproject.toml
+++ b/examples/art-mcp/pyproject.toml
@@ -25,4 +25,6 @@ dev = [
     "polars>=1.31.0",
     "ipywidgets>=8.1.6",
     "ipykernel>=6.29.5",
+    "matplotlib>=3.10.3",
+    "seaborn>=0.13.2",
 ]
