--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.4.4"
 description = "The OpenPipe Agent Reinforcement Training (ART) library"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = ["openai>=1.65.5", "typer>=0.15.2", "litellm>=1.63.0"]
+dependencies = ["openai>=1.65.5", "typer>=0.15.2", "litellm>=1.63.0","weave>=0.51.51",]
 
 [project.optional-dependencies]
 plotting = ["matplotlib>=3.10.1", "seaborn>=0.13.2"]
@@ -23,7 +23,6 @@ backend = [
     "accelerate==1.7.0",
     "awscli>=1.38.1",
     "setproctitle>=1.3.6",
-    "weave>=0.51.51",
     "tblib>=3.0.0",
     "setuptools>=78.1.0",
     "wandb>=0.19.8",
