fix: Pin TRL and Transformers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ backend = [
     "setuptools>=78.1.0",
     "wandb>=0.19.8",
     "polars>=1.26.0",
+    "transformers==4.53.2",
+    "trl==0.19.0",
 ]
 
 skypilot = ["semver>=3.0.4", "skypilot[cudo,do,fluidstack,gcp,lambda,paperspace,runpod]==0.9.3"]
