--- a/dev/tau-bench/pyproject.toml
+++ b/dev/tau-bench/pyproject.toml
@@ -8,8 +8,8 @@ dependencies = [
     "litellm>=1.72.6.post2",
     "mistralai>=1.8.2",
     "openpipe>=4.50.0",
-    "openpipe-art[backend]",
-    "skypilot[runpod]>=0.9.3",
+    "openpipe-art",
+    "skypilot-nightly[runpod,hyperbolic]==1.0.0.dev20250717",
     "tenacity>=9.1.2",
     "termcolor>=3.1.0",
     "openai>=1.74.0",
