--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -23,6 +23,10 @@ jobs:
       run: |
         curl -LsSf https://astral.sh/uv/install.sh | sh
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
+    - name: Install dependencies
+      run: |
+        uv sync --all-extras
     
     - name: Run code quality checks
       run: |
