--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ dev-dependencies = [
     "openpipe>=4.49.0",
     "hatch>=1.14.1",
     "ruff>=0.12.1",
+    "pyright>=1.1.403",
 ]
 
 [tool.uv.sources]
